Oh geez. No background image shows if background color set. Overlaps forever. Fixed.

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -1,7 +1,7 @@
 body {
-  background: #fff;
+  /*background: #fff;*/
   background-image: url('http://www.sarahschultz.info/images/scribs.png');
-  /*background-repeat: repeat;*/
+  background-repeat: repeat;
   font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #444;
 
